<package format="3">
  <name>robotino_msgs</name>
  <version>1.0.0</version>
  <description>
This package defines certain custom messages for Robotino.
  </description>
  <maintainer email="tianlan.shao@tum.de">Tianlan Shao</maintainer>
  <author>indorewala@servicerobotics.eu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/robotino_msgs</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
