<package format="3">
  <name>robotino_node</name>
  <version>1.0.0</version>
  <description>
Implements a node which reads sensor data from Robotino and broadcasts it.
It also implements a few services.
  </description>
  <maintainer email="tianlan.shao@tum.de">Tianlan Shao</maintainer>
  <author>indorewala@servicerobotics.eu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/robotino_node</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robotino_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
