<package>
  <name>robotino_safety</name>
  <version>1.0.0</version>
  <description>
The robotino_safety package contains the robotino_safety_node which controls the command velocities (cmd_vel) sent to Robotino so that potential collisions can be avoided.
  </description>
  <maintainer email="tianlan.shao@tum.de">Tianlan Shao</maintainer>
  <author>indorewala@servicerobotics.eu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/robotino_safety</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotino_node</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>robotino_node</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
