<package format="3">
 <name>robotino_teleop</name>
  <version>1.0.0</version>
  <description>
Implements nodes to control Robotino using a joystick or a keyboard.
  </description>
  <maintainer email="tianlan.shao@tum.de">Tianlan Shao</maintainer>
  <author>indorewala@servicerobotics.eu</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/robotino_teleop</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robotino_node</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
